# co-log

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
cl-core/: Cargo.toml  results.sql
cl-core/src/: lib.rs  scanner.rs
cl-core/src/communicator/: mod.rs
cl-core/src/parser/: ast.rs  mod.rs  tests.rs
cl-core/src/scanner/: mod.rs  tests.rs
cl-core/src/transpiler/: mod.rs  tests.rs
colog/: Cargo.toml  results.sql
colog/src/: logic_test.rs  main.rs  test.rs  tests.rs  text.rs
src/: lib.rs
src/communicator/: mod.rs
src/parser/: ast.rs  mod.rs  tests.rs
src/scanner/: mod.rs  tests.rs
src/transpiler/: mod.rs  tests.rs
