[package]
name = "colog"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0"
scrawl = "2.0"
cl_core = { path = "../cl-core" }
clap = { version = "4.1", features = ["derive"] }
