[package]
name = "colog"
version = "0.1.0"
edition = "2021"
authors.workspace = true
include = ["/src", ".env"]

[dependencies]
directories = "4.0"
scrawl = "2.0"
cl_core = { path = "../cl-core" }
clap = { version = "4.1", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dotenvy = "0.15"

[build-dependencies]
dotenvy = "0.15"
